--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,56 @@ flex-wrap: wrap;
     }
     
     /* MAIN SECTION*/
+    .hero-two {
+        font-size: 36px;
+        color:#1F2937;
+        font-weight: 900;
+        margin-top: 3em;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    .photo-grid-container {
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        margin: 3em  0 6em 0;
+    }
+    .photo-grid-item {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        max-width: 200px;
+        align-items: center;
+        gap: .5em;
+    
+    }
+    .box {
+        border: 4px solid #3882F6;
+        border-radius: 20px;
+        width: 160px;
+        height: 160px;
+        margin-right: 20px;
+    }
+    /* QUOTE SECTION */
+
+    .quote-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #E5E7EB;
+        padding: 7em 13em;
+    }
+    .quote-container em {
+            font-size: 36px;
+            font-weight: 100;
+            color: #1f2937;
+    }
+    .quote-container p {
+        align-self: flex-end;
+        font-weight: bolder;
+        font-size: 24px;
+        color: #1f2937;
+    }
+    
