--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ flex-wrap: wrap;
     width: 60%;
     }
     
-    .secondary, .button-one {
+    .secondary, .button-one, .button-two {
     color: #E5E7EB;
     font-size: 18px;
     width: 75%;
@@ -156,4 +156,41 @@ flex-wrap: wrap;
         font-size: 24px;
         color: #1f2937;
     }
+    /* CALL TO ACTION */
+    
+    .calltoaction-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5em 13em;
+    }
+    .container {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: #3882F6;
+        padding: 3em;
+        width: 100%;
+        border-radius: 10px;
+    }
+    
+    .button-two {
+    border: 2px solid #FFF;
+    padding: 7px 1em;
+    width: 120px;
+    background-color: #3882F6;
+    border-radius: 8px;
+    cursor: pointer;
+    }
+    .str {
+    font-size: 24px;
+    color: #FFF;
+    }
+    .signtext {
+    color: #FFF;
+    text-align: end;
+    }
+
+
+    /* FOOTER */
     
