--- a/styles.css
+++ b/styles.css
@@ -193,4 +193,12 @@ flex-wrap: wrap;
 
 
     /* FOOTER */
-    
+    .footer-container {
+    background-color: #1f2937;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 0;
+    }
+
